--- a/.github/workflows/openapi-pages.yml
+++ b/.github/workflows/openapi-pages.yml
@@ -3,7 +3,7 @@ name: Update OpenAPI docs on GitHub Pages
 on:
   push:
     paths:
-      - './**'
+      - '**.yaml'
     branches:
       - master
   workflow_dispatch:
